--- a/app/views/registered_sections/_created.html.erb
+++ b/app/views/registered_sections/_created.html.erb
@@ -1,5 +1,8 @@
 <%- if created.new_record? -%>
-  <%= render :partial => 'add_button' %>
+  <%= render :partial => 'add_button', :locals => { :section_id => created.section_id } %>
+  <% javascript_tag do %>
+    alert('<%= (created.errors.any? ? created.errors.map{|e|"That " + e.last}.join(' ') : "That didn't work." ) %>');
+  <% end %>
 <%- else -%>
   <span class="loaded">Added</span>
 <%- end -%>
