--- a/app/views/sections/_section.erb
+++ b/app/views/sections/_section.erb
@@ -9,16 +9,14 @@
 
   <td class="button">
     <% form_for WishlistSection.new, :html => { :id => nil, :class => 'newWishlistSection' } do |f| %>
-      <%= f.hidden_field :section_id, :value => section.id, :id => nil %>
-      <%= f.submit 'Add to Wishlist', :name => nil, :id => nil %>
+      <%= render :partial => 'wishlist_sections/add_button', :locals => { :section_id => section.id } %>
     <% end %>
   </td>
   <% end %>
   <% if options["show_schedule_button"] %>
   <td class="button">
     <% form_for RegisteredSection.new, :html => { :id => nil, :class => 'newRegisteredSection' } do |f| %>
-      <%= f.hidden_field :section_id, :value => section.id, :id => nil %>
-      <%= f.submit 'Add to Schedule', :name => nil, :id => nil %>
+      <%= render :partial => 'registered_sections/add_button', :locals => { :section_id => section.id } %>
     <% end %>
   </td>
   <% end %>
