--- a/app/views/wishlist_sections/_created.html.erb
+++ b/app/views/wishlist_sections/_created.html.erb
@@ -1,6 +1,7 @@
 <%- if created.new_record? -%>
+  <%= render :partial => 'add_button', :locals => { :section_id => created.section_id } %>
   <% javascript_tag do %>
-    alert('badness');
+    alert('<%= (created.errors.any? ? created.errors.map{|e|"That " + e.last}.join(' ') : "That didn't work." ) %>');
   <% end %>
 <%- else -%>
   <span class="loaded">Wishlisted</span>
