--- a/app/views/degree_requirements/index.html.erb
+++ b/app/views/degree_requirements/index.html.erb
@@ -10,7 +10,9 @@
                   
     <%= render  :partial => "#{classname.pluralize}/#{classname}", 
                 :object => req.required,
-                :locals => {:options => options} %>
+                :locals => { :options => options,
+                             :wishlist_section_ids => @wishlist_section_ids,
+                             :registered_section_ids => @registered_section_ids } %>
   <% end %>
 </table>
 
