--- a/app/views/groups/_group.html.erb
+++ b/app/views/groups/_group.html.erb
@@ -15,6 +15,8 @@
     %>
     <%= render  :partial => 'courses/course_list', 
                 :object => group.group_members.map(&:course),
-                :locals => {:options => defined?(options) ? options : {} } -%>
+                :locals => { :options => defined?(options) ? options : {},
+                             :wishlist_section_ids => wishlist_section_ids,
+                             :registered_section_ids => registered_section_ids } %>
   </div>
 </td></tr>
