--- a/app/views/sections/_section.erb
+++ b/app/views/sections/_section.erb
@@ -1,3 +1,7 @@
+<%
+  wishlist_section_ids = [] unless defined?(wishlist_section_ids)
+  registered_section_ids = [] unless defined?(registered_section_ids)
+%>
 <tr>
   <td><%=section.professor%></td>    
   <td><%=section.room%></td>
@@ -8,15 +12,23 @@
   <% if options["show_wishlist_button"] %>
 
   <td class="button">
-    <% form_for WishlistSection.new, :html => { :id => nil, :class => 'newWishlistSection' } do |f| %>
-      <%= render :partial => 'wishlist_sections/add_button', :locals => { :section_id => section.id } %>
+    <% if wishlist_section_ids.include? section.id %>
+      Wishlisted&nbsp;&nbsp;
+    <% else %>
+      <% form_for WishlistSection.new, :html => { :id => nil, :class => 'newWishlistSection' } do |f| %>
+        <%= render :partial => 'wishlist_sections/add_button', :locals => { :section_id => section.id } %>
+      <% end %>
     <% end %>
   </td>
   <% end %>
   <% if options["show_schedule_button"] %>
   <td class="button">
-    <% form_for RegisteredSection.new, :html => { :id => nil, :class => 'newRegisteredSection' } do |f| %>
-      <%= render :partial => 'registered_sections/add_button', :locals => { :section_id => section.id } %>
+    <% if registered_section_ids.include? section.id %>
+      Added
+    <% else %>
+      <% form_for RegisteredSection.new, :html => { :id => nil, :class => 'newRegisteredSection' } do |f| %>
+        <%= render :partial => 'registered_sections/add_button', :locals => { :section_id => section.id } %>
+      <% end %>
     <% end %>
   </td>
   <% end %>
