Minor style changes to schedule and the overall look.

--- a/app/views/layouts/mypackportal.html.erb
+++ b/app/views/layouts/mypackportal.html.erb
@@ -98,6 +98,6 @@ form.search{ margin-bottom: 0; margin-top: 0; }
 
 <table border="0" cellspacing="0" cellpadding="0" width="100%"><tr><td valign="top">
   <img src="/images/enrollment.png" style="float: left;">
-</td><td valign="top" cellpadding="5" width="100%">
+</td><td valign="top" cellpadding="5" width="100%" style="background: white; padding: .6em;">
 
 <%= render :partial => 'layouts/tabs' %>
