--- a/app/views/layouts/_tabs.html.erb
+++ b/app/views/layouts/_tabs.html.erb
@@ -12,7 +12,7 @@ end
 %>
 
 <% if session[:semester] %>
-<div style="float:right; margin-right: 1em;">
+<div class="rightAlign">
 Current semester: <%= Semester.find(session[:semester]).name %>
 <%= link_to "(Change semester)", semesters_path%>
 </div>
