--- a/app/views/registered_sections/_schedule.html.erb
+++ b/app/views/registered_sections/_schedule.html.erb
@@ -8,10 +8,13 @@
 
 
 <table class="courseList">
-  <% options = {"show_drop_button" => true} %>
+  <% for reg_section in @registered_sections %>
   <%= render  :partial => 'courses/course', 
-              :collection => @registered_sections.map(&:section),
-              :locals => {:options => options} %>
+              :object => reg_section.section,
+              :locals => { :options => { :show_drop_button => true,
+                                         :added => true,
+                                         :added_object => reg_section } } %>
+  <% end %>
 </table>
 
 <%- end -%>
