--- a/app/views/degree_requirements/index.html.erb
+++ b/app/views/degree_requirements/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Degree Requirements</h1>
+<h1>Register for a Required Course</h1>
 
 <table class="courseList">
   <% for req in @degree_requirements %>
